# watari

./: Cargo.toml  LICENSE  flake.nix
src/: lib.rs  nav.rs
