[package]
name = "watari"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Watari (渡り) — seamless window navigation between Neovim and tmux panes"
homepage = "https://github.com/pleme-io/watari"
repository = "https://github.com/pleme-io/watari"
readme = "README.md"
license = "MIT"
categories = ["text-editors"]
keywords = ["neovim", "tmux", "navigation", "window"]

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11"] }
tane = { path = "../tane", version = "0.1.0" }
